feat(stats): add transmission monitoring and improve system stats collection
- Add Transmission client monitoring with session and torrent stats
- Replace direct file/proc access with systeminformation library for more reliable stats
- Add network totals display and improved disk usage formatting
- Update UI to show Transmission stats and enhanced network metrics
- Add new config options for Transmission connection

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test/format.test.js"
+    "test": "node test/format.test.js",
+    "stats": "node scripts/print-stats.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "systeminformation": "^5.25.11"
   },
   "devDependencies": {}
 }
