feat: add better-sqlite3 as optional dependency and make metric insertion async
Update metrics recorder to await insertMetric call and handle errors silently

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express": "^5.2.1",
     "systeminformation": "^5.25.11"
   },
+  "optionalDependencies": {
+    "better-sqlite3": "^9.4.0"
+  },
   "devDependencies": {}
 }
