feat(db): add better-sqlite3 support for improved performance
Implement better-sqlite3 as an optional dependency to enhance database operations. When available, it will be used instead of the sqlite3 command-line tool, providing better performance and reliability. The changes include:
- Moving better-sqlite3 from optionalDependencies to dependencies
- Adding fallback to sqlite3 CLI when better-sqlite3 is not available
- Implementing prepared statements for common operations

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.2.1",
-    "systeminformation": "^5.25.11"
-  },
-  "optionalDependencies": {
+    "systeminformation": "^5.25.11",
     "better-sqlite3": "^9.4.0"
   },
   "devDependencies": {}
