--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "test": "node test/format.test.js",
     "stats": "node scripts/print-stats.js",
-    "update-and-restart": "git fetch && git pull && sudo systemctl restart system-monitor"
+    "update-and-restart": "git fetch && git pull && npm install && npm run restart",
+    "restart": "sudo systemctl restart system-monitor"
   },
   "keywords": [],
   "author": "",
