feat(storage): add detailed storage monitoring and memory metrics
- Add storage device classification and monitoring for HDD/SD
- Implement detailed memory metrics and alert thresholds
- Add new API endpoints for storage data and CSV exports
- Update UI to display storage devices and detailed memory info
- Extend database schema to store storage metrics

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js",
     "test": "node test/format.test.js",
     "stats": "node scripts/print-stats.js",
+    "collect:hdd": "node scripts/collect-hdd.js",
+    "collect:sd": "node scripts/collect-sd.js",
     "update-and-restart": "git fetch && git pull && npm install && npm run restart",
     "restart": "sudo systemctl restart system-monitor"
   },
