--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "collect:hdd": "node scripts/collect-hdd.js",
     "collect:sd": "node scripts/collect-sd.js",
     "update-and-restart": "git fetch && git pull && npm install && npm run restart",
-    "restart": "sudo systemctl restart system-monitor"
+    "restart": "sudo systemctl restart system-monitor",
+    "load:test": "node scripts/load-test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "better-sqlite3": "^9.4.0",
     "express": "^5.2.1",
-    "systeminformation": "^5.25.11",
-    "better-sqlite3": "^9.4.0"
-  },
-  "devDependencies": {}
+    "prom-client": "^15.1.3",
+    "systeminformation": "^5.25.11"
+  }
 }
